nick hijacked my brain and piloted my fingers and i wrote some code